--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="capture">Capture</string>
     <string name="stats">Stats</string>
     <string name="settings">Settings</string>
-    <string name="enterDetails">Enter Details</string>
+    <string name="enter_details">Enter Details</string>
     <string name="camera">Camera</string>
+    <string name="quantity_label">Quantity (in kg)</string>
+    <string name="select_language">Select Language</string>
+    <string name="select">Select</string>
 </resources>
