Change select language button

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -5,7 +5,7 @@
     <string name="learn">सीखना</string>
     <string name="capture">फोटो लो</string>
     <string name="stats">आँकड़े</string>
-    <string name="settings">समायोजन</string>
+    <string name="settings">सेटिंग्स</string>
     <string name="enter_details">विवरण दर्ज करें</string>
     <string name="camera">कैमरा</string>
     <string name="quantity_label">मात्रा (किलो में)</string>
