--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="fetch">Fetch</string>
     <string name="language">Language</string>
     <string name="chosen_language">Chosen Language</string>
+    <string name="cancel">Cancel</string>
+    <string name="app_restart_note_after_language_selection">The app will restart after selecting the language.</string>
 </resources>
