--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -24,4 +24,5 @@
     <string name="chosen_language">चुनी हुई भाषा</string>
     <string name="cancel">रद्द करे</string>
     <string name="app_restart_note_after_language_selection">भाषा चुनने के बाद ऐप फिर से चालू हो जाएगा।</string>
+    <string name="location_not_found">स्थान नहीं मिला!</string>
 </resources>
