--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="chosen_language">Chosen Language</string>
     <string name="cancel">Cancel</string>
     <string name="app_restart_note_after_language_selection">The app will restart after selecting the language.</string>
+    <string name="location_not_found">Location not found!</string>
 </resources>
