--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">AutoFIS</string>
+    <string name="fish">Fish</string>
     <string name="history">History</string>
     <string name="learn">Learn</string>
     <string name="capture">Capture</string>
@@ -24,4 +25,5 @@
     <string name="cancel">Cancel</string>
     <string name="app_restart_note_after_language_selection">The app will restart after selecting the language.</string>
     <string name="location_not_found">Location not found!</string>
+    <string name="drawing_bounding_boxes">Drawing bounding boxes</string>
 </resources>
