--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="drawing_bounding_boxes">Drawing bounding boxes</string>
     <string name="uploading_fish_data">Uploading Fish Data</string>
     <string name="map_view_may_not_render_properly">MapView may not render properly because of low internet connectivity!</string>
+    <string name="view_details">View Details</string>
 </resources>
