--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -37,4 +37,8 @@
     <string name="wind_direction">বায়ু দিক</string>
     <string name="selected_box">নির্বাচিত বক্স</string>
     <string name="nearby_fishing_zones">কাছাকাছি মাছ ধরার অঞ্চল</string>
+    <string name="km_per_hr">%1$s কিমি/ঘন্টা</string>
+    <string name="degree_celsius">%1$s °C</string>
+    <string name="humidity_percent">%1$s \%%</string>
+    <string name="wind_deg">%1$s °</string>
 </resources>
