--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -37,4 +37,8 @@
     <string name="wind_direction">గాలి దిశ</string>
     <string name="selected_box">ఎంచుకున్న పెట్టె</string>
     <string name="nearby_fishing_zones">సమీపంలోని ఫిషింగ్ జోన్లు</string>
+    <string name="km_per_hr">%1$s కిమీ/గం</string>
+    <string name="degree_celsius">%1$s °C</string>
+    <string name="humidity_percent">%1$s \%%</string>
+    <string name="wind_deg">%1$s °</string>
 </resources>
