--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,8 @@
     <string name="wind_direction">Wind Direction</string>
     <string name="selected_box">Selected Box</string>
     <string name="nearby_fishing_zones">Nearby fishing zones</string>
+    <string name="km_per_hr">%1$s km/h</string>
+    <string name="degree_celsius">%1$s °C</string>
+    <string name="humidity_percent">%1$s \%%</string>
+    <string name="wind_deg">%1$s °</string>
 </resources>
